# bincake

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
crates/bincake/: Cargo.toml
crates/bincake-core/: Cargo.toml  README.md
crates/bincake-core/src/: error.rs  lib.rs  num.rs  read_write.rs  serializable.rs  serialize.rs  serialize_le.rs  serialize_num.rs  serialize_tuple.rs  sized_vec.rs  traits.rs  tuple_n.rs  vec_n.rs
crates/bincake-derive/: Cargo.toml
crates/bincake-derive/src/: derive_serialize.rs  lib.rs  serializable_derive.rs
crates/bincake-derive/tests/: roundtrip.rs
crates/bincake/src/: lib.rs
