[workspace]
members = ["crates/bincake", "crates/bincake-core", "crates/bincake-derive"]
resolver = "2"

[workspace.dependencies]
bincake = { path = "crates/bincake", version = "1.0.1" }
bincake-core = { path = "crates/bincake-core", version = "1.0.1" }
bincake-derive = { path = "crates/bincake-derive", version = "1.0.1" }
