[package]
name = "bincake-core"
version = "1.2.1"
edition = "2024"
description = "Core library for bincake serialization."
license = "MIT"
repository = "https://github.com/aeckar/bincake"
readme = "README.md"
keywords = ["binary", "decode", "deserialize", "encode", "serialize"]
categories = ["encoding"]

[dependencies]
thiserror = "2"
pastey = "0.2.1"
taped = "1.5.2"
