[package]
name = "bincake-derive"
version = "0.1.0"
edition = "2024"
description = "um"
license = "MIT"
repository = "https://github.com/aeckar/bincake"
readme = "README.md"
keywords = []
categories = []

[lib]
proc-macro = true

[dependencies]
syn = "2.0.111"
quote = "1.0.42"
proc-macro2 = "1.0.103"

[dev-dependencies]
bincake-core = { path = "../bincake-core" }
taped = "1.2.1"
