[package]
name = "bincake-derive"
version = "1.0.0"
edition = "2024"
description = "Derive macros for bincake serialization."
license = "MIT"
repository = "https://github.com/aeckar/bincake"
readme = "README.md"
keywords = ["binary", "decode", "deserialize", "encode", "serialize"]
categories = ["encoding"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0.111"
quote = "1.0.42"
proc-macro2 = "1.0.103"

[dev-dependencies]
bincake-core = { version = "1.0.0", path = "../bincake-core" }
taped = "1.2.1"
