[package]
name = "bincake-derive"
version = "1.2.1"
edition = "2024"
description = "Derive macros for bincake serialization."
license = "MIT"
repository = "https://github.com/aeckar/bincake"
readme = "README.md"
keywords = ["binary", "decode", "deserialize", "encode", "serialize"]
categories = ["encoding"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0.111"
quote = "1.0.42"
proc-macro2 = "1.0.103"

[dev-dependencies]
bincake-core = { workspace = true }
taped = "1.5.2"
