[package]
name = "bincake"
version = "0.1.0"
edition = "2024"
description = "um"
license = "MIT"
repository = "https://github.com/aeckar/bincake"
readme = "../../README.md"
keywords = []
categories = []

[dependencies]
bincake-core = { version = "0.1.0", path = "../bincake-core" }
bincake-derive = { version = "0.1.0", path = "../bincake-derive", optional = true }

[features]
default = ["derive"]
derive = ["dep:bincake-derive"]
