[package]
name = "bincake"
version = "1.0.0"
edition = "2024"
description = "Serde-free deterministic binary serialization."
license = "MIT"
repository = "https://github.com/aeckar/bincake"
readme = "../../README.md"
keywords = ["binary", "decode", "deserialize", "encode", "serialize"]
categories = ["encoding"]

[dependencies]
bincake-core = { version = "1.0.0", path = "../bincake-core" }
bincake-derive = { version = "1.0.1", path = "../bincake-derive", optional = true }

[features]
default = ["derive"]
derive = ["dep:bincake-derive"]
