[package]
name = "bincake"
version = "1.1.0"
edition = "2024"
description = "Serde-free deterministic binary serialization."
license = "MIT"
repository = "https://github.com/aeckar/bincake"
readme = "../../README.md"
keywords = ["binary", "decode", "deserialize", "encode", "serialize"]
categories = ["encoding"]

[dependencies]
bincake-core = { workspace = true }
bincake-derive = { workspace = true, optional = true }

[features]
default = ["derive"]
derive = ["dep:bincake-derive"]
